--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,15 @@ body, * {
   color: #324d67;
 }
 
+.products-heading h2{
+  font-size: 40px;
+  font-weight: 800;
+}
+.products-heading p{
+  font-size: 16px;
+  font-weight: 200;
+}
+
 .products-container {
   display: flex;
   justify-content: center;
@@ -24,4 +33,113 @@ body, * {
   gap: 15px;
   margin-top: 20px;
   width: 100%;
+}
+
+
+.hero-banner-container{
+  padding: 100px 40px;
+  background-color: #c2c2c2;
+  border-radius: 15px;
+  position: relative;
+  height: 500px;
+  line-height: 0.9; 
+  width: 100%;
+
+}
+
+.hero-banner-container .item-solo{
+  font-size: 20px;
+}
+
+.hero-banner-container button{
+  border-radius: 15px;
+  padding: 10px 16px;
+  background-color: #f02d34;
+  color: white;
+  border: none;
+  margin-top: 40px;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  z-index:10000 !important;
+}
+
+.hero-banner-container h3{
+  font-size: 4rem;
+  margin-top: 4px;
+}
+.hero-banner-container h1{
+  color: white;
+  font-size: 10em;
+  margin-left: -20px;
+  text-transform: uppercase;
+}
+
+.desc {
+  position: absolute;
+  right : 10%;
+  bottom: 5%;
+  width: 300px;
+  line-height: 1.3;
+  display: flex;
+  flex-direction: column;
+  color: #324d67;
+}
+ 
+.desc p {
+  color: #5f5f5f;
+  font-weight: 100;
+  text-align: end;
+}
+
+.desc h5 {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 16px;
+  align-self: flex-end;
+}
+.hero-banner-image{
+  position: absolute;
+  top: 10%;
+  right:30%;
+}
+
+.product-card{
+  cursor: pointer;
+   transform: scale(1, 1);
+   transition: transform 0.5s ease;
+  color: #324d67;
+ 
+ }
+ .product-card:hover{
+   transform: scale(1.1,1.1)
+ }
+
+
+@media screen and (max-width:800px) {
+  .hero-banner-container{
+    height: 560px;
+  }
+  .hero-banner-image{
+    width: 77%;
+    height: 62%;
+    top: -2%;
+    right: -6%;
+  }
+
+  
+  .hero-banner-container h1{
+    font-size: 50px;
+  }
+ .hero-banner-container h3{
+    font-size: 40px;
+  }
+  .hero-banner-container button{
+    margin-top: 90px;
+    z-index: 10000;
+  }
+  .desc {
+    bottom: 60px;
+  }
+  
 }
